# Universal-Media-Downloader

./: .env.example  .gitignore  CHANGES.md  CHANGES_TESTFIX.md  HANDOFF.md  README.md  STRUCTURE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/alembic/: env.py
infra/alembic/versions/: 0001_initial.py  (+1 more)
infra/docker/: bot.Dockerfile  entrypoint.sh
locales/en/: messages.ftl
locales/ru/: messages.ftl
src/: main.py
src/config/: settings.py
src/domain/: exceptions.py
src/infrastructure/: health.py
src/shared/: logging.py
tests/: conftest.py
tests/integration/: test_repositories.py  test_user_repository_language.py
tests/unit/: test_arq_task_queue.py  test_bot_factory.py  test_download_flow.py  test_error_classifier.py  test_error_localizer.py  test_estimate_filesize.py  test_formatting.py  test_help_formatting.py  test_i18n.py  test_language_keyboard.py  test_language_switch.py  test_local_storage.py  test_locale_manager.py  test_logging.py  test_missing_file_diagnostic.py  test_model_column_types.py  test_ping_job.py  test_preview_context_store.py  test_preview_download_use_case.py  test_preview_formatting.py  test_process_download_errors.py  test_process_download_use_case.py  test_process_kill_mechanism.py  test_rate_limiter.py  test_register_user_use_case.py  test_request_download_use_case.py  test_resolve_downloaded_filepath.py  test_settings.py  test_telegram_bot_factory.py  test_telegram_notifier.py  test_trigger_ping_job_use_case.py  test_url_allowlist.py  test_url_validation.py  test_ytdlp_downloader.py
(+47 files in other folders)
